--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88ec1b1d",
+   "execution_count": 1,
+   "id": "74924584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0957301",
+   "id": "1cdf18a0",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0278b37f",
+   "execution_count": 2,
+   "id": "4212c3b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'verack\\x00\\x00\\x00\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59113a1a",
+   "id": "a96185fd",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -67,10 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63c1d984",
+   "execution_count": 3,
+   "id": "634f6e41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -80,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d624374",
+   "id": "04d72989",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -93,10 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68265037",
+   "execution_count": 4,
+   "id": "f5802a56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.008s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -106,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d71e16",
+   "id": "05ff2fe0",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -119,10 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aa2292d7",
+   "execution_count": 5,
+   "id": "87ba1bd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4\n",
     "\n",
@@ -132,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2218170",
+   "id": "eacf5f26",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -145,10 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26fdf464",
+   "execution_count": 6,
+   "id": "c19f04ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5\n",
     "\n",
@@ -158,10 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4222db01",
+   "execution_count": 7,
+   "id": "9b7b68cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'verack'\n"
+     ]
+    }
+   ],
    "source": [
     "# Handshake Example\n",
     "from network import SimpleNode, VersionMessage, VerAckMessage\n",
@@ -173,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7835d26a",
+   "id": "e5d2cfc2",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -186,10 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec85ddf7",
+   "execution_count": 8,
+   "id": "3b4bfb11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.018s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6\n",
     "\n",
@@ -199,10 +275,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9582a2b7",
+   "execution_count": 9,
+   "id": "4e0797bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00000000a141216a896c54f211301c436e557a8d55900637bbdce14c6c7bddef\n",
+      "00000000ca4b69045a03d7b20624def97a5366418648d5005e82fd3b345d20d0\n",
+      "000000004c63907577f6beb84a97af137738c2342de8ee7872c0cd4df1dcb213\n",
+      "000000001c1eae2f038485775bad4d77500698b069259f98900d9f6ab646b92c\n",
+      "0000000012ee5cd7ab160c09b83754c095fef94ccead459dbc45184a56154053\n",
+      "0000000083f8b6d4f1d818b7e8771e1505cb9fd2259702257ea409afa5ff63e0\n",
+      "00000000a29242d3931efe2c21b6318f24cbf79df7d97eb7bd8076593fe0d2c4\n",
+      "00000000112c2a0b4d83fdd2b153b82235d50e088bdd86ce36fb3d1928ff2552\n",
+      "00000000b91ca39c169b3fabc9f7b99058a6a1edf09ecd6d7c52d62ee99b01fe\n",
+      "000000000f1aef56190aee63d33a373e6487132d522ff4cd98ccfc96566d461e\n",
+      "000000001897323d6feb2358a313ab11b2b6e033fe5b1e86e8f30ad0a1701de0\n",
+      "0000000049195c8e3e5d13bb807cf2170cdf30abef7263cb245b21b49cf46df2\n",
+      "00000000b9c449d7272fa6ca3f8d028e1ac02381129bfcdc0a1f4e67c6d007cc\n",
+      "000000008a89868a8f27c33e46b78752ed92763b9d45ae8791e0f9cb5acdd97c\n",
+      "000000000fa8bfa0f0dd32f956b874b2c7f1772c5fbedcb1b35e03335c7fb0a8\n",
+      "000000004f2886a170adb7204cb0c7a824217dd24d11a74423d564c4e0904967\n",
+      "000000002732d387256b57cabdcb17767e3d30e220ea73f844b1907c0b5919ea\n",
+      "0000000040514b192e6ca247d83388bf11cb1d5e980610ae2c6324cbb0594b32\n",
+      "0000000015bb50096055846954f7120e30d6aa2bd5ab8d4a4055ceacc853328a\n"
+     ]
+    }
+   ],
    "source": [
     "# Block Header Download Example\n",
     "from block import GENESIS_BLOCKS\n",
@@ -236,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c18ac88",
+   "id": "ddfb321d",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -245,10 +347,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "57e7ac07",
+   "execution_count": 10,
+   "id": "2e5c2564",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0000000089d757fd95d79f7fcc2bc25ca7fc16492dca9aa610730ea05d9d3de9\n",
+      "000000001af3b22a7598b10574deb6b3e2d596f36d62b0a49cb89a1f99ab81eb\n",
+      "000000000be66197ad285aedd52e56036f28d595fe281858bc5d562173d4d6de\n",
+      "00000000118da1e2165a19307b86f87eba814845e8a0f99734dce279ca3fb029\n",
+      "000000007c4fc01a14af8067762fb807144b1b59cd4ec79ffc61efae3439757d\n",
+      "0000000000e5d282a44a897650367ebccc890f8550263e64487a34612975bd7c\n",
+      "000000000e92deb9fc5350ecce48cd26561d3707f6acc5474889ce34a2faf0a7\n",
+      "00000000161a4a693fd5d5964bb48a732e230273e88489e0e85fae1294e63699\n",
+      "000000000becf05ed9a5093f553f03a85f24a831fa9f1ffcca9a5a5066fef020\n",
+      "000000001cf5440e7c9ae69f655759b17a32aad141896defd55bb895b7cfc44e\n",
+      "0000000060662a5ca0b2aa015afe39299fa4e281c4c71a58cb816f5732cfabc1\n",
+      "00000000005da26890c97ecfca4d51974b42338f1b0b4b299c9a3158d8b06e4e\n",
+      "0000000003665532235284c300585ffd9e0d44a16a66ed06351c1d06801322b2\n",
+      "0000000011b9447373685d9ee78e17d2e0be2701e589aa787c7702dd9299e807\n",
+      "0000000002d3cd050eb30bd369bcd5a7098f5c4a88f93c031e3bf06d8b58b9e1\n",
+      "0000000000162a3da1229fc058b904bde0e28ab1fad489f8805df2561b854727\n",
+      "0000000000a206c0ee4c1e42badc056f97692ee3909ffd5416e3362b2c1ea465\n",
+      "00000000015a8d54db1b04dbb13eaed7b8c0b7a82c107a1e8a388b296a84529d\n",
+      "00000000015bb4069249fa1f41ae61d8a7447aaacc33c50dacd3c3654377fa43\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7\n",
     "\n",
@@ -302,10 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0cbece5",
+   "execution_count": 11,
+   "id": "7dbe6ecc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd\n"
+     ]
+    }
+   ],
    "source": [
     "# Merkle Parent Example\n",
     "from helper import hash256\n",
@@ -317,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accda1cd",
+   "id": "cb3d20af",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -330,10 +466,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6fd5f58",
+   "execution_count": 12,
+   "id": "1635f392",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 8\n",
     "\n",
@@ -351,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c79d8d0",
+   "id": "d0129c41",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -364,10 +508,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5dd0e91b",
+   "execution_count": 13,
+   "id": "bfb4f8c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 9\n",
     "\n",
@@ -377,10 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b401c8d",
+   "execution_count": 14,
+   "id": "2363085c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd\n",
+      "7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800\n",
+      "3ecf6115380c77e8aae56660f5634982ee897351ba906a6837d15ebc3a225df0\n"
+     ]
+    }
+   ],
    "source": [
     "# Merkle Parent Level Example\n",
     "from helper import merkle_parent\n",
@@ -403,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7152012b",
+   "id": "23ce1085",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -419,10 +585,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a29de744",
+   "execution_count": 15,
+   "id": "1dd3e1e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26906cb2caeb03626102f7606ea332784281d5d20e2b4839fbb3dbb37262dbc1\n",
+      "717a0d17538ff5ad2c020bab38bdcde66e63f3daef88f89095f344918d5d4f96\n",
+      "d6c56a5281021a587f5a1e0dd4674bff012c69d960136d96e6d72261d5b696ae\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 10\n",
     "\n",
@@ -453,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3726a7",
+   "id": "45a325e2",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -466,10 +642,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c66a8ed",
+   "execution_count": 16,
+   "id": "1be72ade",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 11\n",
     "\n",
@@ -479,10 +667,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d537e579",
+   "execution_count": 17,
+   "id": "d8239779",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acbcab8bcc1af95d8d563b77d24c3d19b18f1486383d75a5085c4e86c86beed6\n"
+     ]
+    }
+   ],
    "source": [
     "# Merkle Root Example\n",
     "from helper import merkle_parent_level\n",
@@ -508,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e446c83",
+   "id": "8016ace0",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -530,10 +726,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e49c47d",
+   "execution_count": 18,
+   "id": "3dd2af47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a67772634e542799333c6c98bc903e36b652918a8d8a9e069391c55b4276c8a1\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 12\n",
     "\n",
@@ -565,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb9df632",
+   "id": "17d3d177",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -578,10 +782,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38d16d3d",
+   "execution_count": 19,
+   "id": "4a227b45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.005s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 13\n",
     "\n",
@@ -591,10 +807,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cac4f4fa",
+   "execution_count": 20,
+   "id": "d9e0b1fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "654d6181e18e4ac4368383fdc5eead11bf138f9b7ac1e15334e4411b3c4797d9\n"
+     ]
+    }
+   ],
    "source": [
     "# Block Merkle Root Example\n",
     "from helper import merkle_root\n",
@@ -613,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da65b244",
+   "id": "c29fdf8c",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -641,10 +865,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b5d444d",
+   "execution_count": 21,
+   "id": "e67c392f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 14\n",
     "\n",
@@ -673,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c613c0ea",
+   "id": "d45e552d",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -686,10 +918,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6df92ff2",
+   "execution_count": 22,
+   "id": "8655b4b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 15\n",
     "\n",
@@ -699,10 +943,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fbe5065",
+   "id": "70f37802",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
+    "network:GetDataMessageTest:test_serialize:\n",
     "Validate the merkle root for this block from Testnet via network protocol:\n",
     "Block Hash:\n",
     "```\n",
@@ -712,10 +957,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c8173632",
+   "execution_count": 23,
+   "id": "7f6e6c3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "627bf8053bd767ad72c6afcd2d91638311f9c7520905a634be13aa8853f7a446\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 16\n",
     "\n",
@@ -729,11 +982,11 @@
     "node.handshake()\n",
     "# create a GetDataMessage\n",
     "getdata = GetDataMessage()\n",
-    "# add_data on the message (BLOCK_DATA_TYPE, block_hash)\n",
+    "# request a block with (BLOCK_DATA_TYPE, block_hash)\n",
     "getdata.add_data(BLOCK_DATA_TYPE, block_hash)\n",
     "# send the getdata message\n",
     "node.send(getdata)\n",
-    "# wait for the block message in response\n",
+    "# wait for the block message in response (class is Block)\n",
     "block_obj = node.wait_for(Block)\n",
     "# check the proof of work\n",
     "if not block_obj.check_pow():\n",
@@ -746,7 +999,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
