--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ec1b1d",
+   "id": "74924584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0957301",
+   "id": "1cdf18a0",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bed5277c",
+   "id": "d41c476d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59113a1a",
+   "id": "a96185fd",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c1d984",
+   "id": "634f6e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d624374",
+   "id": "04d72989",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68265037",
+   "id": "f5802a56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d71e16",
+   "id": "05ff2fe0",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2292d7",
+   "id": "87ba1bd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2218170",
+   "id": "eacf5f26",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26fdf464",
+   "id": "c19f04ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4222db01",
+   "id": "9b7b68cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7835d26a",
+   "id": "e5d2cfc2",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec85ddf7",
+   "id": "3b4bfb11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9582a2b7",
+   "id": "4e0797bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c18ac88",
+   "id": "ddfb321d",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e8cf52",
+   "id": "6c4a8df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0cbece5",
+   "id": "7dbe6ecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accda1cd",
+   "id": "cb3d20af",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b93d63a",
+   "id": "046ff78a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c79d8d0",
+   "id": "d0129c41",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd0e91b",
+   "id": "bfb4f8c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b401c8d",
+   "id": "2363085c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7152012b",
+   "id": "23ce1085",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c484998",
+   "id": "4bbea4f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3726a7",
+   "id": "45a325e2",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c66a8ed",
+   "id": "1be72ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d537e579",
+   "id": "d8239779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e446c83",
+   "id": "8016ace0",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce66dd7",
+   "id": "87b570a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb9df632",
+   "id": "17d3d177",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d16d3d",
+   "id": "4a227b45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cac4f4fa",
+   "id": "d9e0b1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da65b244",
+   "id": "c29fdf8c",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "386cfd24",
+   "id": "cd72d8e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c613c0ea",
+   "id": "d45e552d",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6df92ff2",
+   "id": "8655b4b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,10 +693,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fbe5065",
+   "id": "70f37802",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
+    "network:GetDataMessageTest:test_serialize:\n",
     "Validate the merkle root for this block from Testnet via network protocol:\n",
     "Block Hash:\n",
     "```\n",
@@ -707,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4844282",
+   "id": "4e22023a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,11 +724,11 @@
     "\n",
     "# create a GetDataMessage\n",
     "\n",
-    "# add_data on the message (BLOCK_DATA_TYPE, block_hash)\n",
+    "# request a block with (BLOCK_DATA_TYPE, block_hash)\n",
     "\n",
     "# send the getdata message\n",
     "\n",
-    "# wait for the block message in response\n",
+    "# wait for the block message in response (class is Block)\n",
     "\n",
     "# check the proof of work\n",
     "\n",
