--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04f2a8a5",
+   "id": "a8ca7f10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +12,54 @@
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
     "from helper import run\n",
-    "import network, compactfilter"
+    "import network, block"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12c24c87",
+   "id": "b7a04b75",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
-    "Verify that the block which had your previous transaction matches the filter for your address.\n"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session8/block.py) pass: `block.py:BlockTest:test_get_transactions`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7e17bd",
+   "id": "7117aa9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercise 1\n",
     "\n",
+    "reload(block)\n",
+    "run(block.BlockTest('test_get_transactions'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caaa17c6",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "Check that the block with your previous transaction in fact has it\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3369dd81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2\n",
+    "\n",
     "from block import Block\n",
-    "from compactfilter import GetCFiltersMessage, CFilterMessage\n",
     "from ecc import PrivateKey\n",
     "from helper import decode_base58, hash256, little_endian_to_int\n",
     "from network import SimpleNode, GetDataMessage, BLOCK_DATA_TYPE\n",
@@ -53,18 +78,6 @@
     "\n",
     "# complete the handshake\n",
     "\n",
-    "# create a GetCFiltersMessage(start_height, stop_hash) using the block height and block hash\n",
-    "\n",
-    "# send the getcfilters message\n",
-    "\n",
-    "# wait for the CFilterMessage command\n",
-    "\n",
-    "# check that the compact filter's block hash is the same as the block hash\n",
-    "\n",
-    "\n",
-    "# check if your ScriptPubKey is in the filter\n",
-    "\n",
-    "\n",
     "# create a GetDataMessage\n",
     "\n",
     "# add the BLOCK_DATA_TYPE with the block hash\n",
@@ -73,17 +86,17 @@
     "\n",
     "# wait for the Block\n",
     "\n",
-    "# use the get_transactions(script_pubkey) method of Block to get transactions\n",
+    "# get transactions in this block that have your ScriptPubKey\n",
     "\n",
     "# print the first one serialized and hexadecimal\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "733eb0e7",
+   "id": "757257fb",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
+    "### Exercise 3\n",
     "\n",
     "\n",
     "\n",
@@ -94,63 +107,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db164cb8",
+   "id": "d354a1dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2\n",
+    "# Exercise 3\n",
     "\n",
     "reload(network)\n",
     "run(network.SimpleNodeTest('test_get_block'))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaebaefd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from block import Block\n",
-    "from compactfilter import GetCFCheckPointMessage, CFCheckPointMessage, GetCFHeadersMessage, CFHeadersMessage, GetCFiltersMessage, CFilterMessage\n",
-    "from helper import hash256\n",
-    "from network import SimpleNode\n",
-    "num_checkpoints = 20\n",
-    "with open('block_headers.testnet', 'rb') as f:\n",
-    "    headers = [Block.parse_header(f) for _ in range(num_checkpoints * 1000)]\n",
-    "block_hashes = [b.hash() for b in headers]\n",
-    "node = SimpleNode('testnet.programmingbitcoin.com', network=\"testnet\")\n",
-    "node.handshake()\n",
-    "get_cfcheckpoint = GetCFCheckPointMessage(stop_hash=block_hashes[-1])\n",
-    "node.send(get_cfcheckpoint)\n",
-    "cfcheckpoint = node.wait_for(CFCheckPointMessage)\n",
-    "height = 0\n",
-    "for checkpoint in cfcheckpoint.filter_headers:\n",
-    "    get_cfheaders = GetCFHeadersMessage(start_height=height, stop_hash=block_hashes[height+1000])\n",
-    "    node.send(get_cfheaders)\n",
-    "    cfheaders = node.wait_for(CFHeadersMessage)\n",
-    "    if cfheaders.last_header != checkpoint:\n",
-    "        raise RuntimeError(f'checkpoint mismatch {cfheaders.last_header.hex()} vs {checkpoint.hex()}')\n",
-    "    node.send(GetCFiltersMessage(start_height=height, stop_hash=block_hashes[height+999]))\n",
-    "    for i in range(1000):\n",
-    "        fb = node.wait_for(CFilterMessage).filter_bytes\n",
-    "        if hash256(fb) != cfheaders.filter_hashes[i]:\n",
-    "            raise RuntimeError(f'{i}: filter does not match hash {hash256(fb).hex()} vs {cfheaders.filter_hashes[i].hex()}')\n",
-    "    height += 1000\n",
-    "print(cfheaders.last_header.hex())"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "bc432c04",
+   "id": "c94a148b",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "### Exercise 4\n",
     "You have been sent some unknown number of sats to your address on signet.\n",
     "\n",
     "Send all of it back (minus fees) to `mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv` using only the networking protocol.\n",
     "\n",
-    "This should be a many input, 1 output transaction.\n",
+    "This should be a 1 input, 1 output transaction.\n",
     "\n",
     "Turn on logging in `SimpleNode` if you need to debug\n"
    ]
@@ -158,23 +135,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3cb3dc5",
+   "id": "bf9c356d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3\n",
+    "# Exercise 4\n",
     "\n",
     "from block import Block\n",
-    "from compactfilter import GetCFiltersMessage, CFilterMessage\n",
     "from ecc import PrivateKey\n",
     "from helper import decode_base58, hash160, hash256, little_endian_to_int\n",
-    "from network import GetHeadersMessage, HeadersMessage, SimpleNode, BLOCK_DATA_TYPE\n",
+    "from network import GetDataMessage, SimpleNode, BLOCK_DATA_TYPE\n",
     "from script import p2pkh_script\n",
     "from tx import Tx, TxIn, TxOut\n",
     "start_block_hex = '<insert from class>'  # CHANGE\n",
-    "start_block = bytes.fromhex(start_block_hex)\n",
-    "start_height = -1  # CHANGE\n",
-    "end_block = b'\\x00' * 32\n",
+    "block_hash = bytes.fromhex(block_hex)\n",
     "passphrase = b'<get from session 2>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
@@ -190,52 +164,26 @@
     "\n",
     "# complete the handshake\n",
     "\n",
-    "# create GetHeadersMessage with the start_block as the start_block and end_block as the end block\n",
-    "\n",
-    "# send the GetHeadersMessage\n",
-    "\n",
-    "# wait for the headers message\n",
-    "\n",
-    "# check that the headers are valid\n",
-    "\n",
-    "\n",
-    "# get the 20th hash (index 19) from the header.headers array\n",
-    "\n",
-    "# create a GetCFiltersMessage\n",
-    "\n",
-    "# send the GetCFiltersMessage\n",
-    "\n",
-    "# loop 100 times\n",
-    "\n",
-    "    # wait for the CFilterMessage\n",
-    "\n",
-    "    # check to see if your ScriptPubKey is in the filter\n",
-    "\n",
-    "        # set block_hash to cfilter's block hash and break\n",
-    "\n",
-    "\n",
-    "        break\n",
     "# get the block object using the get_block method of node\n",
     "\n",
     "# initialize the utxos array\n",
     "\n",
-    "# grab the txs from the block using get_transactions(my_script_pubkey) method\n",
+    "# grab the txs from the block using get_transactions\n",
     "\n",
     "# there should be one transaction\n",
     "if len(txs) != 1:\n",
     "    raise RuntimeError(\"incorrect number of transactions\")\n",
-    "# set utxos to the tx's utxos for our address using find_utxos(addr) method of the first tx\n",
-    "\n",
-    "# there should be one utxo\n",
-    "if len(utxos) != 1:\n",
-    "    raise RuntimeError(\"incorrect number of utxos\")\n",
     "# initialize the tx_ins array\n",
     "\n",
-    "# prev_tx, prev_index, prev_amount are what we get in the first utxo\n",
+    "# loop through the outputs of the transaction, enumerated\n",
     "\n",
-    "# create TxIn and add to array\n",
+    "    # check if the output has the script pubkey we're looking for\n",
     "\n",
-    "# calculate the output amount (prev_amount - fee)\n",
+    "\n",
+    "\n",
+    "        # record the amount from this output\n",
+    "\n",
+    "# calculate the output amount (prev amount - fee)\n",
     "\n",
     "# create TxOut\n",
     "\n",
@@ -245,7 +193,7 @@
     "\n",
     "# print the tx's id\n",
     "\n",
-    "# send this signed transaction on the network\n"
+    "# send this signed transaction via the node\n"
    ]
   }
  ],
